--- CHANGELOG ---

--- PyFMI-2.4 ---
    * Fixed a missed encoding of strings, used for Python 3 (ticket:5163)
    * Added timeout option for when simulating CS FMUs (ticket:5313)
    * Added option to specify if the stop time is fixed or not (ticket:5298)
    * Fixed bug where setting the maximum order had no impact (ticket:5212)
    * Added option to use central difference instead of forward differences (ticket:5204)
    * Minor bugfixes and documentation improvements.

--- PyFMI-2.3.1 ---
    * Added caching of model variables when retriving the variables lists (ticket:5007)
    * Added more information about where time is spent in a simulation (ticket:4983)
    * Improved performance when using filters (ticket:4984)

--- PyFMI-2.3 ---
    * Implemented a Master algorithm for simulation of CS FMUS
                            (ticket:4918)
    * Information from the integrator to the log (ticket:4101)
    * Parameter estimation of FMUs (ticket:4461, ticket:4809)
    * Bug fixes: plot gui (ticket:4472), pyfmi without assimulo (ticket:4509)
                 handle result (ticket:4658), enum definition (ticket:4740)
                 log name (ticket:4792), enum get/set (ticket:4941)
                 malformed xml (ticket:4888)
    * Allow do steps to be performed in parallel (ticket:4541)
    * Direct acces to low-level FMIL methods (ticket:4542)
    * Performance improvements for get/set (ticket:4566)
    * Fixed output dependencies (ticket:4728, ticket:4762)
    * Fixed derivative dependencies (ticket:4729, ticket:4765)
    * Add option to use finite differences if directional derivatives are not available (ticket:4733)
    * Add support for get/set string (ticket:4798)
    * Added option to disable reloading of simulation results (ticket:4930)

--- PyFMI-2.2 ---
    * Support for sparse representation of matrices (ticket:4306)
    * Update methods for getting variable lists (ticket:4370)
    * Fix for Python 3 (ticket:4386, ticket:4470)